# MFF

./: .gitignore  hufmanii.cs
3_1_rozkladnaprvno/: ConsoleApp1.sln
3_1_rozkladnaprvno/ConsoleApp1/: Program.cs
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/ConsoleApp1/: Program.cs
ConsoleApp2/: ConsoleApp2.sln
ConsoleApp2/ConsoleApp2/: Program.cs
ExcelDU/: ExcelDU.sln
ExcelDU/ExcelDU/: Program.cs
FileReaderStringAnalyze/: FileReaderStringAnalyze.sln
FileReaderStringAnalyze/FileReaderStringAnalyze/: Program.cs
Nezarka/: Nezarka.sln
Nezarka/Nezarka/: Program.cs
PEXESO/: PEXESO.sln
PEXESO/PEXESO/: Form1.Designer.cs  Form1.cs  PEXESO.csproj  Program.cs
ReverseArray/: ReverseArray.sln
ReverseArray/ReverseArray/: Program.cs
Waterfall/: Waterfall.sln
alphabet/: alphabet.sln
desetinnamista/: desetinnamista.sln
domino/: domino.sln
evenandodd/: evenandodd.sln
factorial/: factorial.sln
helloworld/: helloworld.sln
huffmam/: huffmam.sln
kingspath/: kingspath.sln
kingspathbonus/: kingspathbonus.sln
python/: csv_calc.sh  du0.py  du1.py  feature_eng.py  ipython.html  k-nearest-n.py  l2_reg.py  ln_sgd.py  ml_task_Volkova.py  mnist.py  prezentace.py  problem_batohu.py  recommendersystems-datacamp.py  setup.cfg  tapsum2json.py  tree.py  untitled0.py  untitled1.py  vysledky_Volkova_batoh.txt
sokoban/: sokoban.sln
stepanares/: stepanares.sln
stepanhuff/: stepanhuff.sln
uvod_do_linuxu/: countdown.sh  factorize.py  key.pub  normalize.sh  scoring.sh  script.sh  sysinfo.sh  timeconv.sh
zapoctovytest/: zapoctovytest.sln
(+19 files in other folders)
