[metadata]
name = mff_volkova_tapsum2json
author = anna_volkova
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
    dateparser ~= 1.1

[options.packages.find]
where = src

